Change Log for OpenXava project
===============================

- Fix: @DescriptionsList inside a dialog is not displayed completely when opened, it is cut on dialog limit. 
- Fix: @DescriptionsList does not close the list when you click in other place.
- Fix: @DescriptionsList with " in the data breaks the module.
- Fix: @DescriptionList with showReferenceView=true and composite key loses not key data on action call.
- Fix: Editors with frame=true adds a little space before editor.
- Fix: Editors with frame=true adds a blank line if the editor is wrapped in a HTML table.
- Fix: Required icon not in correct position in text areas.
- In the validation message values of the properties of the current entity can be used.
- Fix: Constraint exception produces a blank message.
- Fix: Bad layout with nested @NoFrame.
- Fix: Collection inside a section is duplicate in some cases.
- Fix: Two groups in the same row in @View not possible.
- Fix: @NoFrame elements not aligned with outside elements.
- Fix: JUnit tests do not find action in some circumstances.
- CSS for layout instead of HTML tables.
- Fix: Elements inside sign in box are not centered.
- Fix: Duplicate buttons after generating PDF or refreshing the page in a view aligned by column (with # in @View).
- Some new common use labels to be used in applications.

OpenXava 5.5 (2016-4-26)
------------------------
- @DescriptionsList combos have autocomplete functionality.
- showReferenceView=true in descriptions list to show a combo and a detail view at the same time for a reference.
- Pressing ENTER in the filter part of a collection executes the filter of the collection.
- "contains" instead of "starts" as default value in filters for string values in list and collections.
- Real Excel exporting by means of type=xls in GenerateReportAction or using the TypicalRealExcel controller.
- New ICON stereotype to store an icon of Material Design Icon into a property of an entity.
- Delete buttons are red only on hover.